chore: enhance CORS configuration and RabbitMQ settings in application.yml